# parallax-editor

./: .env.example  .gitignore  AGENTS.md  PERFORMANCE_IMPROVEMENTS.md  README.md  SEARCH_BENCHMARK_README.md  TESTING_SUMMARY.md  benchmark_search.py  emails_data_dump.mbox  pyproject.toml  requirements.txt  run_tests.sh  test_ghost_text.py  test_google_search.py  test_refactoring.py  validate.py
docs/: code-search-sdk-plan.md  completion_debounce_worklog.md  ghost_text_complete.md  ghost_text_implementation.md  hld.md
examples/: cached_query_usage.py
fulfillers/: __init__.py  base.py  completions.py  models.py
fulfillers/ambiguities/: ambiguities.py
fulfillers/codesearch/: __init__.py  base.py  readmecodesearch.md  ripgrep.py  search.py
fulfillers/completions/: __init__.py  completions.py
fulfillers/dummy/: __init__.py  dummy.py
fulfillers/web_context/: __init__.py  web_context.py
parallax/: __init__.py  app.py  main.py
parallax/config/: __init__.py  ai_config.py
parallax/core/: __init__.py  command_handler.py  (+5 more)
parallizer/: README.md  __init__.py  backend_handler.py  requirements.txt
shared/: __init__.py  context.py  models.py
signatures/: __init__.py  cards_refiner_signature.py  codebase_summary_signature.py  completions_signature.py  completions_singnature.py  query_generator.py  question_ambiguity_signature.py  rg_query_generator.py  web_query_generator.py
tests/: TEST_README.md  __init__.py  benchmark_fulfillers.py  conftest.py  test_ai_feed.py  test_backend_api.py  test_code_search.py  test_command_handler.py  test_context.py  test_feed_handler.py  test_invoke.py  test_lm_service_integration.py  test_search_result_serialization.py  test_suggestion_tracker.py  test_syntax_highlighter.py  validate.py
user-journeys/: INLINE_COMPLETION.md  SLACK_FEATURE_PLAN.md
utils/: __init__.py  cards_refiner.py  context.py  custom_lm_router.py  llm_check.py  lm_service.py  perplexity.py  ripgrep.py
web/: .env.example  BACKEND_INTEGRATION_COMPLETE.md  BACKEND_INTEGRATION_PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+83 files in other folders)
