[project]
name = "parallax-code-search"
version = "0.1.0"
description = "Lightweight code search SDK using ripgrep"
requires-python = ">=3.10"
dependencies = [
    # No dependencies! stdlib only
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
