[project]
name = "parallax-code-search"
version = "0.1.0"
description = "Lightweight code search SDK using ripgrep"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "dspy>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "persist-cache>=0.4.4",
    "httpx>=0.26.0",
    "uvicorn>=0.38.0",
    "fastapi>=0.121.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["parallax", "parallax.widgets", "parallax.core", "parallax.config", "shared", "parallizer", "parallizer.fulfillers", "parallizer.signatures", "parallizer.utils"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
